--- a/speaker-guide.html
+++ b/speaker-guide.html
@@ -49,7 +49,7 @@
       <p id="slide-tips"><em><strong>Slide Tips</strong></em></p>
       <p>You will be presenting in a large room, and slides will be on tv screens that may be hard to
         see for people sitting in the back. Also while we record the slides on video, the camera is
-        not close to the screen. Plan your talk with these parameters in mind.
+        not close to the screen. Plan your talk with these parameters in mind.</p>
       <ul>
         <li>Slides should be <strong>light text on dark background</strong>. Very light backgrounds
           wash out completely on video and negatively affect the overall video quality. This one is
@@ -58,7 +58,22 @@
           more slides with less text per slide over fewer densely-populated slides when possible.</li>
         <li>Favor <strong>high contrast</strong> between text and background colors.</li>
       </ul>
-
+      
+      <p id="talk-duration"><em><strong>Preparing | Talk Duration</strong></em></p>
+      <p>
+        We have the room from 7-9pm. You'll have at least 60 minutes to speak, though you don't have to use all of
+        that time, and we can arrange for more time if you need it. Each meetup starts with our recurring segment 
+        "News from the Bleeding Edge", which is a 15-25 minute recap of what's new in web technology. Sometimes we
+        have lightining talks (up to 3) following this segment, then the main event (your talk).
+      </p>
+      <p>
+        Many speakers choose to <b>arrive 15 minutes early</b> (6:45pm) to get setup and oriented with the room.
+        There are multiple TV's and an overhead microphone, as well as the video camera. For macOS users, you can
+        connect via Airplay. For Windows/Linux users, there is an HDMI and VGA connection. Usually we're in the main room
+        on the 16th floor, where the HDMI connection can be a little finicky. Double check with the organizers beforehand,
+        just in case Capital Factory needs to move the event to another space.
+      </p>
+      
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
     <footer></footer>
