--- a/speaker-guide.html
+++ b/speaker-guide.html
@@ -61,17 +61,21 @@
       
       <p id="talk-duration"><em><strong>Preparing | Talk Duration</strong></em></p>
       <p>
-        We have the room from 7-9pm. You'll have at least 60 minutes to speak, though you don't have to use all of
-        that time, and we can arrange for more time if you need it. Each meetup starts with our recurring segment 
-        "News from the Bleeding Edge", which is a 15-25 minute recap of what's new in web technology. Sometimes we
-        have lightining talks (up to 3) following this segment, then the main event (your talk).
+        We have the room from <b>7-9pm</b>. You'll have at least <b>60 minutes to speak</b>, though you don't have to use it all.
+        We can arrange for more time (up to ~80 minutes) if you need it. Be advised each meetup starts with our recurring segment 
+        "News from the Bleeding Edge", performed by Brian and/or Corey, which is a 15-25 minute recap of what's new in 
+        web technology. Sometimes lightining talks follow this segment (up to 3) before the main event (your talk).
       </p>
       <p>
-        Many speakers choose to <b>arrive 15 minutes early</b> (6:45pm) to get setup and oriented with the room.
+        Many speakers choose to <b>arrive 15 minutes early (6:45pm)</b> to get setup and oriented with the room.
         There are multiple TV's and an overhead microphone, as well as the video camera. For macOS users, you can
         connect via Airplay. For Windows/Linux users, there is an HDMI and VGA connection. Usually we're in the main room
         on the 16th floor, where the HDMI connection can be a little finicky. Double check with the organizers beforehand,
         just in case Capital Factory needs to move the event to another space.
+      </p>
+      <p>
+        Check out some of our prior meets on <a href="https://www.youtube.com/results?search_query=bleeding+edge+web" target="_blank">YouTube</a>
+        to get a good feel for how the events usually go.
       </p>
       
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
