--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <h3>2017</h3>
       <ul>
         <li>September &mdash; <a href="2017/09-sep">Bleeding Edge Web</a> /
-          <a href="#">Live to Code, Don't Code to Live</a></li>
+          <a href="https://drive.google.com/file/d/0ByfYIhtzqBvPZ2pIMnFDWjcxUTQ/view?usp=sharing">Live to Code, Don't Code to Live</a></li>
         <li>August &mdash; <a href="2017/08-aug">Bleeding Edge Web</a> /
           <a href="https://docs.google.com/presentation/d/10uziLsfuVsSNTiedEiwO0BBNU8u74UT1e7sSTtIpDEE/edit?usp=sharing">Get
           the Software Job You Want... Guaranteed</a></li>
