--- a/slides/index.html
+++ b/slides/index.html
@@ -34,6 +34,8 @@
 
       <h3>2017</h3>
       <ul>
+        <li>October &mdash; <a href="2017/10-oct">Bleeding Edge Web</a> /
+          <a href="">An Introduction To Alexa and Alexa Skills</a></li>
         <li>September &mdash; <a href="2017/09-sep">Bleeding Edge Web</a> /
           <a href="https://drive.google.com/file/d/0ByfYIhtzqBvPZ2pIMnFDWjcxUTQ/view?usp=sharing">Live to Code, Don't Code to Live</a></li>
         <li>August &mdash; <a href="2017/08-aug">Bleeding Edge Web</a> /
