Added Nate's slidedeck

--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <h3>2017</h3>
       <ul>
         <li>November &mdash; <a href="2017/11-nov">Bleeding Edge Web</a> /
-          OAuth 2.0 and OpenID Connect in plain English</li>
+          <a href="https://speakerdeck.com/nbarbettini/oauth-and-openid-connect-in-plain-english" target="_blank">OAuth 2.0 and OpenID Connect in plain English<a/></li>
         <li>October &mdash; <a href="2017/10-oct">Bleeding Edge Web</a> /
           <a href="https://docs.google.com/presentation/d/1SZ_DSWphXBksHrylrSPKSVcfLN-O1Ba_BD9ONGDpuVY/edit?usp=sharing">An Introduction To Alexa and Alexa Skills</a></li>
         <li>September &mdash; <a href="2017/09-sep">Bleeding Edge Web</a> /
