--- a/sponsorship.html
+++ b/sponsorship.html
@@ -29,9 +29,9 @@
 
       <p>To sponsor a meetup, or if you have any questions about sponsoring, please <a
         href="mailto:bleedingedgeatx@gmail.com?subject=Sponsorship%20Inquiry">email us</a>.
-      <p>We ask for $250 to cover the cost of food and drink (we typically feed 80+
+      <p>We ask for $300 to cover the cost of food and drink (we typically feed 80+
         attendees). We handle all of the ordering and delivery logistics. Remaining money, if any,
-        is used to offset the recurring costs of running the meetup (e.g. meetup.com fees).</p>
+        is used to offset the recurring costs of running the meetup (e.g. meetup.com fees, swag, etc).</p>
       <p>Alternately, you are welcome to supply your own food/drinks instead, so long as it complies
         with Capital Factory's rules. This means alcohol is OK as long as it is pre-packaged in
         cans or bottles. Open liquor is also possible, but you must provide a licensed bartender.</p>
