--- a/sponsorship.html
+++ b/sponsorship.html
@@ -37,8 +37,8 @@
         cans or bottles. Open liquor is also possible, but you must provide a licensed bartender.</p>
       <p>In return, you get:</p>
       <ul>
-        <li>Your name in front of every person who receives our invitation emails (~2,800 as of
-          August 2017, mostly developers in Austin)</li>
+        <li>Your name in front of every person who receives our invitation emails (3,000+ as of
+          November 2017, mostly developers in Austin)</li>
         <li>A thank you slide and mention during the Bleeding Edge Web presentation</li>
         <li>A chance to address the group in person, if desired</li>
         <li>A listing on our meetup page as a sponsor</li>
