--- a/slides/index.html
+++ b/slides/index.html
@@ -32,6 +32,11 @@
         that highlights a few current themes in web app development, in addition to a primary
         presentation (linked when available).</p>
 
+      <h3>2018</h3>
+      <ul>
+        <li>January &mdash; <a href="2018/01-jan">Bleeding Edge Web</a> / Noding a Blockchain (no slides)</li>
+      </ul>
+      
       <h3>2017</h3>
       <ul>
         <li>November &mdash; <a href="2017/11-nov">Bleeding Edge Web</a> /
