Updated video link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p>We meet at <a href="http://capitalfactory.com/">Capital Factory</a> at 7pm on the 4th Wednesday
         of each month, and we normally head a block over to <a href="http://buffalobilliardsaustin.com/">Buffalo
         Billiards</a> for socializing after each meetup.</em></p></p>
-      <p>Events are <a href="http://youtube.com/austintechlive">livestreamed on YouTube</a>, and you
+      <p>Events are <a href="https://www.facebook.com/pg/austintechlive/videos/?ref=page_internal">livestreamed on Facebook</a> (only during the meetup), and you
         can follow <a href="https://twitter.com/edgeatx">@EdgeATX</a> for news and updates.</p>
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
