--- a/slides/index.html
+++ b/slides/index.html
@@ -34,7 +34,7 @@
 
       <h3>2018</h3>
       <ul>
-        <li>February &mdash; <a href="2018/02-feb">Bleeding Edge Web</a> / A Brief Introduction to Web RTC</li>
+        <li>February &mdash; <a href="2018/02-feb">Bleeding Edge Web</a> / <a href="2018/02-feb/webrtc.pdf">A Brief Introduction to Web RTC</a></li>
         <li>January &mdash; <a href="2018/01-jan">Bleeding Edge Web</a> / Noding a Blockchain (no slides)</li>
       </ul>
       
