--- a/slides/index.html
+++ b/slides/index.html
@@ -41,7 +41,7 @@
       <h3>2017</h3>
       <ul>
         <li>November &mdash; <a href="2017/11-nov">Bleeding Edge Web</a> /
-          <a href="https://speakerdeck.com/nbarbettini/oauth-and-openid-connect-in-plain-english" target="_blank">OAuth 2.0 and OpenID Connect in plain English<a/></li>
+          <a href="https://speakerdeck.com/nbarbettini/oauth-and-openid-connect-in-plain-english" target="_blank">OAuth 2.0 and OpenID Connect in plain English</a></li>
         <li>October &mdash; <a href="2017/10-oct">Bleeding Edge Web</a> /
           <a href="https://docs.google.com/presentation/d/1SZ_DSWphXBksHrylrSPKSVcfLN-O1Ba_BD9ONGDpuVY/edit?usp=sharing">An Introduction To Alexa and Alexa Skills</a></li>
         <li>September &mdash; <a href="2017/09-sep">Bleeding Edge Web</a> /
@@ -57,11 +57,11 @@
           <a href="https://speakerdeck.com/techpeace/the-history-and-future-of-speaking-with-machines"
             target="_blank">The History and Future of Speaking with Machines</a></li>
           <li>April &mdash; <a href="2017/04-apr">Bleeding Edge Web</a> /
-          Web Performance Deep Dive with Chander Dhall</li>
+          Web Performance Deep Dive with Chander Dhall (no slides)</li>
         <li>March &mdash; <a href="2017/03-mar">Bleeding Edge Web</a> /
           <a href="https://coreybutler.github.io/talk-electron-fenix/">Electron + Fenix</a></li>
         <li>February &mdash; <a href="2017/02-feb">Bleeding Edge Web</a> /
-          What I Learnt Spending 200 Hours Teaching my Daughter to Code...</a></li>
+          What I Learnt Spending 200 Hours Teaching my Daughter to Code... (no slides)</li>
         <li>January &mdash; <a href="2017/01-jan">Bleeding Edge Web</a> / <a
           href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">VueJS for Web Applications</a></li>
       </ul>
