Add holiday break

--- a/slides/index.html
+++ b/slides/index.html
@@ -40,6 +40,7 @@
       
       <h3>2017</h3>
       <ul>
+        <li>December &mdash; <em>Holiday break</em></li>
         <li>November &mdash; <a href="2017/11-nov">Bleeding Edge Web</a> /
           <a href="https://speakerdeck.com/nbarbettini/oauth-and-openid-connect-in-plain-english" target="_blank">OAuth 2.0 and OpenID Connect in plain English</a></li>
         <li>October &mdash; <a href="2017/10-oct">Bleeding Edge Web</a> /
