--- a/slides/index.html
+++ b/slides/index.html
@@ -34,6 +34,9 @@
 
       <h3>2018</h3>
       <ul>
+        <li>March &mdash; <a href="2018/03-mar">Bleeding Edge Web</a> / 
+          <a href="https://www.vicesoftware.com/bleeding-edge-react-testing-talk/">Practical 
+            Patterns for Maintainable React Redux Architecture</a></li>
         <li>March (special SXSW edition) &mdash; <a href="2018/03-mar-sxsw">Open Source Innovation in Government</a></li>
         <li>February &mdash; <a href="2018/02-feb">Bleeding Edge Web</a> / <a href="2018/02-feb/webrtc.pdf">A Brief Introduction to Web RTC</a></li>
         <li>January &mdash; <a href="2018/01-jan">Bleeding Edge Web</a> / Noding a Blockchain (no slides)</li>
