--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <ul>
         <li>April &mdash;
           <a href="2018/04-apr">Bleeding Edge Web</a> /
-          <a href="#">&lt;component&gt; Architectures with VueJS</a>
+          &lt;component&gt; Architectures with VueJS
         </li>
         <li>March &mdash;
           <a href="2018/03-mar">Bleeding Edge Web</a> /
