--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Bleeding Edge Web Meetup - Austin, TX</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
-  <link rel="icon" type="image/x-icon" href="http://edgeatx.github.io/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
