Speaker guide updates

--- a/speaker-guide.html
+++ b/speaker-guide.html
@@ -47,8 +47,8 @@
         anyone watching the livestream during your talk.</p>
 
       <p id="slide-tips"><em><strong>Slide Tips</strong></em></p>
-      <p>You will be presenting in a large room, and slides will be on tv screens that may be hard to
-        see for people sitting in the back. Also while we record the slides on video, the camera is
+      <p>You will be presenting in a large room, and slides will be on monitors that may be hard to
+        see for people sitting in the back. Also, while we record the slides on video, the camera is
         not close to the screen. Plan your talk with these parameters in mind.</p>
       <ul>
         <li>Slides should be <strong>light text on dark background</strong>. Very light backgrounds
@@ -61,20 +61,17 @@
       
       <p id="talk-duration"><em><strong>Preparing | Talk Duration</strong></em></p>
       <p>
-        We have the room from <b>7-9pm</b>. You'll have at least <b>60 minutes to speak</b>, though you don't have to use it all.
-        We can arrange for more time (up to ~80 minutes) if you need it. Be advised each meetup starts with our recurring segment 
-        "News from the Bleeding Edge", performed by Brian and/or Corey, which is a 15-25 minute recap of what's new in 
-        web technology. Sometimes lightining talks follow this segment (up to 3) before the main event (your talk).
+        We have the room from <b>7-9pm</b>. We always start off with our standing "News from the Bleeding Edge"
+        talk, which takes the first 25 minutes or so. The perfect duration for the main talk is typically about
+        <b>30-45 minutes</b>, which leaves some time afterward for questions and networking.
       </p>
       <p>
-        Many speakers choose to <b>arrive 15 minutes early (6:45pm)</b> to get setup and oriented with the room.
-        There are multiple TV's and an overhead microphone, as well as the video camera. For macOS users, you can
-        connect via Airplay. For Windows/Linux users, there is an HDMI and VGA connection. Usually we're in the main room
-        on the 16th floor, where the HDMI connection can be a little finicky. Double check with the organizers beforehand,
-        just in case Capital Factory needs to move the event to another space.
+        You should <b>arrive 15 minutes early (by 6:45pm)</b> to get set up and oriented with the room.
+        There are multiple monitors and an overhead microphone, as well as the video camera. For Mac users, you can
+        connect via Airplay. For Windows/Linux users, there are HDMI and VGA connection options.
       </p>
       <p>
-        Check out some of our prior meets on <a href="https://www.youtube.com/results?search_query=bleeding+edge+web" target="_blank">YouTube</a>
+        Check out some of our prior meetups on <a href="https://www.youtube.com/results?search_query=bleeding+edge+web" target="_blank">YouTube</a>
         to get a good feel for how the events usually go.
       </p>
       
