Initial draft for May talk - trying pug

--- a/slides/index.html
+++ b/slides/index.html
@@ -33,6 +33,10 @@
 
       <h3>2018</h3>
       <ul>
+        <li>May &mdash;
+          <a href="2018/05-may">Bleeding Edge Web</a> /
+          <a href="#">Putting Service Workers to Work</a>
+        </li>
         <li>April &mdash;
           <a href="2018/04-apr">Bleeding Edge Web</a> /
           <a href="https://docs.google.com/presentation/d/1DKROirA9eV8O8_2QzxLu_wplHT8gNl0fvz4oAwwuIME/edit#slide=id.p">&lt;component&gt; Architectures with VueJS</a>
