Update slide links

--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <ul>
         <li>May &mdash;
           <a href="2018/05-may">Bleeding Edge Web</a> /
-          <a href="#">Putting Service Workers to Work</a>
+          <a href="https://slides.victoriabernard.com/#/">Putting Workers to Work</a>
         </li>
         <li>April &mdash;
           <a href="2018/04-apr">Bleeding Edge Web</a> /
