Added June slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -33,6 +33,10 @@
 
       <h3>2018</h3>
       <ul>
+        <li>June &mdash;
+          <a href="2018/06-jun">Bleeding Edge Web</a> /
+          A Deep Dive into Spectre</a>
+        </li>
         <li>May &mdash;
           <a href="2018/05-may">Bleeding Edge Web</a> /
           <a href="https://slides.victoriabernard.com/#/">Putting Workers to Work</a>
