WIP placeholder Aug slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -33,10 +33,14 @@
 
       <h3>2018</h3>
       <ul>
-          <li>July &mdash;
-            <a href="2018/07-jul">Bleeding Edge Web</a> /
-            <a href="https://docs.google.com/presentation/d/1c5wU3whpGbhvpKdW-PPDazolUeKjI5Idnc1xFJwv3jc/edit?usp=sharing" target="_blank">Symmetric and Asymmetric Cryptography and RSA Deep Dive</a>
-          </li>
+        <li>August &mdash;
+          <a href="2018/08-aug">Bleeding Edge Web</a> /
+          <a href="#" target="_blank">Node.js Night!</a>
+        </li>
+        <li>July &mdash;
+          <a href="2018/07-jul">Bleeding Edge Web</a> /
+          <a href="https://docs.google.com/presentation/d/1c5wU3whpGbhvpKdW-PPDazolUeKjI5Idnc1xFJwv3jc/edit?usp=sharing" target="_blank">Symmetric and Asymmetric Cryptography and RSA Deep Dive</a>
+        </li>
         <li>June &mdash;
           <a href="2018/06-jun">Bleeding Edge Web</a> /
           <a href="https://docs.google.com/presentation/d/1Uxr1v-nc0vOu8_1vHGWFWCvW7BIrG1p1_eATzYR4mNk/edit?usp=sharing" target="_blank">A Deep Dive into Spectre</a>
