--- a/slides/index.html
+++ b/slides/index.html
@@ -33,9 +33,12 @@
 
       <h3>2018</h3>
       <ul>
+        <li>September &mdash;
+          <a href="2018/09-sep">Bleeding Edge Web</a> / 
+          <a href="#">Testing Big in JavaScript</a>
+        </li>
         <li>August &mdash;
-          <a href="2018/08-aug">Bleeding Edge Web</a> /
-          <a href="#" target="_blank">Node.js Night!</a>
+          <a href="2018/08-aug">Bleeding Edge Web</a> / Node.js Night! (no slides)
         </li>
         <li>July &mdash;
           <a href="2018/07-jul">Bleeding Edge Web</a> /
