--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <ul>
         <li>September &mdash;
           <a href="2018/09-sep">Bleeding Edge Web</a> / 
-          <a href="#">Testing Big in JavaScript</a>
+          <a href="https://speakerdeck.com/robdel12/testing-big-in-javascript-bleeding-edge-web">Testing Big in JavaScript</a>
         </li>
         <li>August &mdash;
           <a href="2018/08-aug">Bleeding Edge Web</a> / Node.js Night! (no slides)
