--- a/slides/index.html
+++ b/slides/index.html
@@ -33,8 +33,12 @@
 
       <h3>2018</h3>
       <ul>
+        <li>October &mdash;
+          <a href="2018/10-oct">Bleeding Edge Web</a> /
+          <a href="#">State of Enjoyment</a>
+        </li>
         <li>September &mdash;
-          <a href="2018/09-sep">Bleeding Edge Web</a> / 
+          <a href="2018/09-sep">Bleeding Edge Web</a> /
           <a href="https://speakerdeck.com/robdel12/testing-big-in-javascript-bleeding-edge-web">Testing Big in JavaScript</a>
         </li>
         <li>August &mdash;
