Removed unnecessary old images, add main talk slides.

--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <ul>
         <li>October &mdash;
           <a href="2018/10-oct">Bleeding Edge Web</a> /
-          <a href="#">State of Enjoyment</a>
+          <a href="https://speakerdeck.com/cowboyd/state-of-enjoyment">State of Enjoyment</a>
         </li>
         <li>September &mdash;
           <a href="2018/09-sep">Bleeding Edge Web</a> /
