--- a/slides/index.html
+++ b/slides/index.html
@@ -31,6 +31,13 @@
       <p style="font-size:16px;">Most presentations include a "News from the Bleeding Edge" section that highlights a few current themes in web app
         development, in addition to a primary presentation (linked when available).</p>
 
+      <h3>2019</h3>
+      <ul>
+        <li>January &mdash;
+          <a href="2019/01-jan">Bleeding Edge Web</a> /
+          Progressive Web Applications
+        </li>
+      </ul>
       <h3>2018</h3>
       <ul>
         <li>October &mdash;
