Added Ted's lightning talk slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -34,7 +34,7 @@
       <h3>2019</h3>
       <ul>
         <li>January &mdash;
-          <a href="2019/01-jan">Bleeding Edge Web</a> /
+          <a href="2019/01-jan">Bleeding Edge Web</a> / <a href="https://github.com/tedpatrick/async-await-talk" target="_blank">Async/Await (Lightning Talk)</a> /
           Progressive Web Applications
         </li>
       </ul>
