--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <ul>
         <li>January &mdash;
           <a href="2019/01-jan">Bleeding Edge Web</a> / <a href="https://github.com/tedpatrick/async-await-talk" target="_blank">Async/Await (Lightning Talk)</a> /
-          Progressive Web Applications
+          <a href="https://docs.google.com/presentation/d/1dhrTz7NcRIkC08D-GdBYQ81C5_TFqE-3on0deQoa8zg/edit?usp=drivesdk" target="_blank">Progressive Web Applications</a>
         </li>
       </ul>
       <h3>2018</h3>
