--- a/slides/index.html
+++ b/slides/index.html
@@ -33,10 +33,13 @@
 
       <h3>2019</h3>
       <ul>
+        <li>February &mdash;
+          <a href="2019/02-feb">Bleeding Edge Web</a> /
+          <a href="#" target="_blank">HomeAway's Multi-Cloud Traffic Director</a>
+        </li>
         <li>January &mdash;
           <a href="2019/01-jan">Bleeding Edge Web</a> / <a href="https://github.com/tedpatrick/async-await-talk" target="_blank">Async/Await (Lightning Talk)</a> /
           <a href="https://docs.google.com/presentation/d/1dhrTz7NcRIkC08D-GdBYQ81C5_TFqE-3on0deQoa8zg/edit?usp=drivesdk" target="_blank">Progressive Web Applications</a>
-          <a href="" target="_blank" class="disabled youtube"><img src="../images/youtube.png"/></a>
         </li>
       </ul>
       <h3>2018</h3>
