--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <p><span class="star">&#x272A;</span> <a target="_blank"
         href="https://edgeatx-invite.herokuapp.com">Join our Slack group</a> to engage with the community, or to
         participate in our live events remotely</p>
+      <p><span class="star">&#x272A;</span> <a target="_blank"
+        href="https://www.quora.com/q/buuusacnhyuytmxw">Join our Quora space</a> to engage with the global edge community, or to
+        for a recap of our prior events.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./speak.html">speaking</a> opportunities.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./sponsorship.html">sponsorship</a> opportunities.</p>
 
@@ -40,7 +43,7 @@
       <p>We meet downtown at <a href="http://capitalfactory.com/">Capital Factory</a> at 7pm on the 3rd Thursday
         of each month, and we normally head a block over to <a href="http://buffalobilliardsaustin.com/">Buffalo
         Billiards</a> for socializing after each meetup.</em></p></p>
-      <p>Events are <a href="https://www.facebook.com/pg/austintechlive/videos/?ref=page_internal">livestreamed 
+      <p>Events are <a href="https://www.facebook.com/pg/austintechlive/videos/?ref=page_internal">livestreamed
         on Facebook</a>, and you can follow <a href="https://twitter.com/edgeatx">@EdgeATX</a> for news and updates.</p>
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
