--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         href="https://edgeatx-invite.herokuapp.com">Join our Slack group</a> to engage with the community, or to
         participate in our live events remotely</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
-        href="https://www.quora.com/q/buuusacnhyuytmxw">Join our Quora space</a> to engage with the global edge community, or to
-        for a recap of our prior events.</p>
+        href="https://www.quora.com/q/buuusacnhyuytmxw">Join our Quora space</a> to engage with the global edge community, or
+        for recaps of prior events.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./speak.html">speaking</a> opportunities.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./sponsorship.html">sponsorship</a> opportunities.</p>
 
