--- a/slides/index.html
+++ b/slides/index.html
@@ -33,9 +33,13 @@
 
       <h3>2019</h3>
       <ul>
+        <li>March &mdash;
+          <a href="2019/03-mar">Bleeding Edge Web</a> /
+          Visual Regression Testing with Percy.io / Level Up with Redis + Node / EnableDB: An Experiment with DB Gateways
+        </li>
         <li>February &mdash;
           <a href="2019/02-feb">Bleeding Edge Web</a> /
-          <a href="#" target="_blank">HomeAway's Multi-Cloud Traffic Director</a>
+          HomeAway's Multi-Cloud Traffic Director (no slides)
         </li>
         <li>January &mdash;
           <a href="2019/01-jan">Bleeding Edge Web</a> / <a href="https://github.com/tedpatrick/async-await-talk" target="_blank">Async/Await (Lightning Talk)</a> /
