--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <ul>
         <li>March &mdash;
           <a href="2019/03-mar">Bleeding Edge Web</a> /
-          Visual Regression Testing with Percy.io / Level Up with Redis + Node / EnableDB: An Experiment with DB Gateways
+          Visual Regression Testing with Percy.io / Level Up with Redis + Node / <a href="adhoc/enabledb">EnableDB: An Experiment with DB Gateways</a>
         </li>
         <li>February &mdash;
           <a href="2019/02-feb">Bleeding Edge Web</a> /
