--- a/slides/index.html
+++ b/slides/index.html
@@ -33,61 +33,106 @@
 
       <h3>2019</h3>
       <ul>
-        <li>March &mdash;
-          <a href="2019/03-mar">Bleeding Edge Web</a> /
-          Visual Regression Testing with Percy.io / Level Up with Redis + Node / <a href="adhoc/enabledb">EnableDB: An Experiment with DB Gateways</a>
+        <li><strong>March</strong> (<a href="https://www.youtube.com/watch?v=HUG4l2CK68Y">video</a>)
+          <ul>
+            <li><a href="2019/03-mar">News from the Bleeding Edge</a></li>
+            <li><a href="https://docs.google.com/presentation/d/1CXa2qyxXwXN9-5O2-CgUm9Xk2QOhJ_dcFgIihm1mTsk/edit?usp=sharing">Visual Regression Testing with Percy.io</a></li>
+            <li>Level Up with Redis + Node</li>
+            <li><a href="adhoc/enabledb">EnableDB: An Experiment with DB Gateways</a></li>
+            <li><strong>Sponsor: <a href="https://grnh.se/27cc659b1">Duo Security</a></strong></li>
+          </ul>
         </li>
-        <li>February &mdash;
-          <a href="2019/02-feb">Bleeding Edge Web</a> /
-          HomeAway's Multi-Cloud Traffic Director (no slides)
+        <li><strong>February</strong> (<a href="https://www.youtube.com/watch?v=4FSc__j1QX0">video</a>)
+          <ul>
+            <li><a href="2019/02-feb">News from the Bleeding Edge</a></li>
+            <li>HomeAway's Multi-Cloud Traffic Director (no slides)</li>
+            <li><strong>Sponsor: <a href="https://homeaway.com/">HomeAway</a></strong></li>
+          </ul>
         </li>
-        <li>January &mdash;
-          <a href="2019/01-jan">Bleeding Edge Web</a> / <a href="https://github.com/tedpatrick/async-await-talk" target="_blank">Async/Await (Lightning Talk)</a> /
-          <a href="https://docs.google.com/presentation/d/1dhrTz7NcRIkC08D-GdBYQ81C5_TFqE-3on0deQoa8zg/edit?usp=drivesdk" target="_blank">Progressive Web Applications</a>
+        <li><strong>January</strong> (<a href="https://www.youtube.com/watch?v=4_pLo8YrqwU">video</a>)
+          <ul>
+            <li><a href="2019/01-jan">News from the Bleeding Edge</a></li>
+            <li><a href="https://github.com/tedpatrick/async-await-talk">Async/Await Demo</a></li>
+            <li><a href="https://docs.google.com/presentation/d/1dhrTz7NcRIkC08D-GdBYQ81C5_TFqE-3on0deQoa8zg/edit?usp=drivesdk" target="_blank">Progressive Web Applications</a></li>
+            <li><strong>Sponsor: <a href="https://www.dell.com/en-us">Dell</a></strong></li>
+          </ul>
         </li>
       </ul>
       <h3>2018</h3>
       <ul>
-        <li>October &mdash;
-          <a href="2018/10-oct">Bleeding Edge Web</a> /
-          <a href="https://speakerdeck.com/cowboyd/state-of-enjoyment">State of Enjoyment</a>
+        <li><strong>November / December</strong>
+          <ul>
+            <li><em>Holiday break</em></li>
+          </ul>
         </li>
-        <li>September &mdash;
-          <a href="2018/09-sep">Bleeding Edge Web</a> /
-          <a href="https://speakerdeck.com/robdel12/testing-big-in-javascript-bleeding-edge-web">Testing Big in JavaScript</a>
+        <li><strong>October</strong> (<a href="https://www.youtube.com/watch?v=JAXU6MgKiik&t=710s">video</a>)
+          <ul>
+            <li><a href="2018/10-oct">News from the Bleeding Edge</a></li>
+            <li><a href="https://speakerdeck.com/cowboyd/state-of-enjoyment">State of Enjoyment</a></li>
+            <li><strong>Sponsor:</strong> <a href="https://www.cloudflare.com/">Cloudflare</a></li>
+          </ul>
         </li>
-        <li>August &mdash;
-          <a href="2018/08-aug">Bleeding Edge Web</a> / Node.js Night! (no slides)
+        <li><strong>September</strong> (<a href="https://youtu.be/1u6eL_BEqHo?t=448">video</a>)
+          <ul>
+            <li><a href="2018/09-sep">News from the Bleeding Edge</a></li>
+            <li><a href="https://speakerdeck.com/robdel12/testing-big-in-javascript-bleeding-edge-web">Testing Big in JavaScript</a></li>
+            <li><strong>Sponsor:</strong> <a href="https://www.cloudflare.com/">Cloudflare</a></li>
+          </ul>
         </li>
-        <li>July &mdash;
-          <a href="2018/07-jul">Bleeding Edge Web</a> /
-          <a href="https://docs.google.com/presentation/d/1c5wU3whpGbhvpKdW-PPDazolUeKjI5Idnc1xFJwv3jc/edit?usp=sharing" target="_blank">Symmetric and Asymmetric Cryptography and RSA Deep Dive</a>
+        <li><strong>August</strong>
+          <ul>
+            <li><a href="2018/08-aug">News from the Bleeding Edge</a></li>
+            <li>Node.js Night! (no slides)</li>
+            <li><strong>Sponsor:</strong> <a href="https://www.cloudflare.com/">Cloudflare</a></li>
+          </ul>
         </li>
-        <li>June &mdash;
-          <a href="2018/06-jun">Bleeding Edge Web</a> /
-          <a href="https://docs.google.com/presentation/d/1Uxr1v-nc0vOu8_1vHGWFWCvW7BIrG1p1_eATzYR4mNk/edit?usp=sharing" target="_blank">A Deep Dive into Spectre</a>
+        <li><strong>July</strong> (<a href="https://www.youtube.com/watch?v=owzf7aaQ_WQ&t=665s">video</a>)
+          <ul>
+            <li><a href="2018/07-jul">News from the Bleeding Edge</a></li>
+            <li><a href="https://docs.google.com/presentation/d/1c5wU3whpGbhvpKdW-PPDazolUeKjI5Idnc1xFJwv3jc/edit?usp=sharing" target="_blank">Symmetric and Asymmetric Cryptography and RSA Deep Dive</a></li>
+          </ul>
         </li>
-        <li>May &mdash;
-          <a href="2018/05-may">Bleeding Edge Web</a> /
-          <a href="https://slides.victoriabernard.com/#/">Putting Workers to Work</a>
+        <li><strong>June</strong>
+          <ul>
+            <li><a href="2018/06-jun">News from the Bleeding Edge</a></li>
+            <li><a href="https://docs.google.com/presentation/d/1Uxr1v-nc0vOu8_1vHGWFWCvW7BIrG1p1_eATzYR4mNk/edit?usp=sharing" target="_blank">A Deep Dive into Spectre</a></li>
+          </ul>
         </li>
-        <li>April &mdash;
-          <a href="2018/04-apr">Bleeding Edge Web</a> /
-          <a href="https://docs.google.com/presentation/d/1DKROirA9eV8O8_2QzxLu_wplHT8gNl0fvz4oAwwuIME/edit#slide=id.p">&lt;component&gt; Architectures with VueJS</a>
+        <li><strong>May</strong>
+          <ul>
+            <li><a href="2018/05-may">News from the Bleeding Edge</a></li>
+            <li><a href="https://slides.victoriabernard.com/#/">Putting Workers to Work</a></li>
+          </ul>
         </li>
-        <li>March &mdash;
-          <a href="2018/03-mar">Bleeding Edge Web</a> /
-          <a href="https://www.vicesoftware.com/bleeding-edge-react-testing-talk/">Practical Patterns for Maintainable React Redux Architecture</a>
+        <li><strong>April</strong>
+          <ul>
+            <li><a href="2018/04-apr">News from the Bleeding Edge</a></li>
+            <li><a href="https://docs.google.com/presentation/d/1DKROirA9eV8O8_2QzxLu_wplHT8gNl0fvz4oAwwuIME/edit#slide=id.p">&lt;component&gt; Architectures with VueJS</a></li>
+          </ul>
         </li>
-        <li>March (special SXSW edition) &mdash;
-          <a href="2018/03-mar-sxsw">Open Source Innovation in Government</a>
+        <li><strong>March</strong>
+          <ul>
+            <li><a href="2018/03-mar">News from the Bleeding Edge</a></li>
+            <li><a href="https://www.vicesoftware.com/bleeding-edge-react-testing-talk/">Practical Patterns for Maintainable React Redux Architecture</a></li>
+          </ul>
         </li>
-        <li>February &mdash;
-          <a href="2018/02-feb">Bleeding Edge Web</a> /
-          <a href="2018/02-feb/webrtc.pdf">A Brief Introduction to Web RTC</a>
+        <li><strong>March (special SXSW edition)</strong>
+          <ul>
+            <li><a href="2018/03-mar-sxsw">Open Source Innovation in Government</a></li>
+          </ul>
         </li>
-        <li>January &mdash;
-          <a href="2018/01-jan">Bleeding Edge Web</a> / Noding a Blockchain (no slides)</li>
+        <li><strong>February</strong>
+          <ul>
+            <li><a href="2018/02-feb">News from the Bleeding Edge</a></li>
+            <li><a href="2018/02-feb/webrtc.pdf">A Brief Introduction to Web RTC</a></li>
+          </ul>
+        </li>
+        <li><strong>January</strong>
+          <ul>
+            <li><a href="2018/01-jan">News from the Bleeding Edge</a></li>
+            <li>Noding a Blockchain (no slides)</li>
+          </ul>
+        </li>
       </ul>
 
       <h3>2017</h3>
@@ -103,7 +148,7 @@
           <a href="2017/10-oct">Bleeding Edge Web</a> /
           <a href="https://docs.google.com/presentation/d/1SZ_DSWphXBksHrylrSPKSVcfLN-O1Ba_BD9ONGDpuVY/edit?usp=sharing">An Introduction To Alexa and Alexa Skills</a>
         </li>
-        <li>September &mdash;
+        <li>September (<a href="https://www.youtube.com/watch?v=jJSApOHv3tQ">video</a>) &mdash;
           <a href="2017/09-sep">Bleeding Edge Web</a> /
           <a href="https://drive.google.com/file/d/0ByfYIhtzqBvPZ2pIMnFDWjcxUTQ/view?usp=sharing">Live to Code, Don't Code to Live</a>
         </li>
