Speaking / sponsorship tweaks

--- a/speak.html
+++ b/speak.html
@@ -32,14 +32,14 @@
       <p>Bleeding Edge Web events follow a consistent format:</p>
       <ol>
         <li>Welcome &amp; Announcements</li>
-        <li>Bleeding Edge Web (20-25 minutes)</li>
-        <li><b>Deep Dive/Primary Talk</b> (~45min-1hr)</li>
-        <li><b>Lightning Talks</b> (~3 talks @5mins/ea)</li>
+        <li>Bleeding Edge Web (~20 minutes)</li>
+        <li><b>Deep Dive/Primary Talk</b> (~40 minutes)</li>
+        <li><b>Lightning Talks</b> (1-2 talks, 5-10 mins each)</li>
         <li>Meetup formally ends by 9pm.</li>
       </ol>
 
       <p id="what"><em><strong>What to Talk About</strong></em></p>
-      <p style="font-size: 65%;">If you'd like to talk but don't think you can fill up an hour, try
+      <p style="font-size: 65%;">If you'd like to talk but don't think you can fill 30-40 minutes, try
         a lightning talk (see below)!</p>
       <p>We like to discuss all things web + mobile. We've had a number of talks about Node.js,
         HTML/JS/CSS, web servers, libraries &amp; frameworks, etc. We've also had talks about
@@ -53,13 +53,13 @@
         perfect topics for our members who might not otherwise attend a meetup specific to them.</p>
 
       <p id="lightning-talks"><em><strong>Lightning Talks</strong></em></p>
-      <p>There aren't any formal guidelines for these, other than trying to keep it to ~5mins.
+      <p>There aren't any formal guidelines for these, other than trying to keep it to 5-10 minutes.
         Some people use 3-5 slides, some just talk. Topics can be anything of interest
         to the group. You know what the group is interested in because you're a part of
         it (what interests you?).</p>
       <ul>
-        <li>A project you're working on at work or for fun. (show &amp; tell)</li>
-        <li>A new (or new-to-you) code library/framework that excites you. (mini-lesson)</li>
+        <li>A project you're working on at work or for fun (show &amp; tell)</li>
+        <li>A new (or new-to-you) code library/framework that excites you (mini-lesson)</li>
       </ul>
 
       <p>Lightning talks in the past have covered things like Vue.js, RiotJS, functional programming,
