--- a/sponsor-guide.html
+++ b/sponsor-guide.html
@@ -37,16 +37,17 @@
         <li>Your company name, website and logo for inclusion in the meetup posting. We'll use the
           logo on your site by default, but let us know if it should be something different.</li>
         <li>A brief writeup about your company, which can also include something about
-          positions you are recruiting for, if applicable</li>
+          positions you are recruiting for, if applicable.</li>
         <li>A contact email or twitter handle for anyone who may want to follow up with
-          you after the meetup</li>
+          you after the meetup.</li>
         <li>A billing contact name and email that we will use to invoice you for the sponsorship
-          fee. The fee is due at the time of the meetup (or anytime earlier).</li>
+          fee. <strong>The fee is due at the time of the meetup</strong> (or anytime earlier).
+          The invoice will be sent from PayPal, and can be paid by credit card or PayPal.</li>
       </ul>
 
       <p>We will include a sponsor slide with your logo in our standard presentation. If
         you require something more than that let us know and we'll work with you. Feel free
-        to bring business cards and/or giveaways if desired.</p>
+        to bring business cards, stickers and/or other giveaways if desired.</p>
 
       <p>Take a look at any of our recent <a href="http://www.meetup.com/bleeding-edge-web/">meetup
         announcements</a> for examples of other sponsor listings.</p>
