--- a/slides/index.html
+++ b/slides/index.html
@@ -37,7 +37,7 @@
           <ul>
             <li><a href="2019/03-mar">News from the Bleeding Edge</a></li>
             <li><a href="https://docs.google.com/presentation/d/1CXa2qyxXwXN9-5O2-CgUm9Xk2QOhJ_dcFgIihm1mTsk/edit?usp=sharing">Visual Regression Testing with Percy.io</a></li>
-            <li>Level Up with Redis + Node</li>
+            <li><a href="https://docs.google.com/presentation/d/1TF1iOV0khPHQMmicDgoHEYQjXACKTtIabEpHAD0kSBg/edit?usp=sharing">Level Up with Redis + Node</a></li>
             <li><a href="adhoc/enabledb">EnableDB: An Experiment with DB Gateways</a></li>
             <li><strong>Sponsor: <a href="https://grnh.se/27cc659b1">Duo Security</a></strong></li>
           </ul>
