--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
       <p><em><strong>About Us</strong></em></p>
       <p>We are an Austin meetup about all things web+mobile. We are language/framework agnostic, and we
         cover different topics each month, with a focus on front end technology.</p>
-      <p>We meet downtown at <a href="http://capitalfactory.com/">Capital Factory</a> at 7pm on the 3rd Thursday
-        of each month, and we normally head a block over to <a href="http://buffalobilliardsaustin.com/">Buffalo
-        Billiards</a> for socializing after each meetup.</em></p></p>
+      <p>We meet downtown at <a href="http://capitalfactory.com/">Capital Factory</a> from 7-9 pm on the 3rd Thursday
+        of each month, and we normally hang out for a bit afterwards to socialize.</em></p></p>
       <p>Events are <a href="https://www.facebook.com/pg/austintechlive/videos/?ref=page_internal">livestreamed
-        on Facebook</a>, and you can follow <a href="https://twitter.com/edgeatx">@EdgeATX</a> for news and updates.</p>
+        on Facebook</a>, and you can follow <a href="https://twitter.com/edgeatx">@edgeATX</a> for news and updates.</p>
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
 
