Added April talk

--- a/slides/index.html
+++ b/slides/index.html
@@ -33,6 +33,13 @@
 
       <h3>2019</h3>
       <ul>
+        <li><strong>April</strong>
+          <ul>
+            <li><a href="2019/04-apr">News from the Bleeding Edge</a></li>
+            <li><a href="https://www.vicesoftware.com/react-redux-boilerplate-with-authentication-authorization-and-architecture-best-practices/">Production React Redux Architecture, Patterns, and Infrastructure Components</a></li>
+            <li><strong>Sponsor: <a href="https://cloudflare.com">CloudFlare</a></strong></li>
+          </ul>
+        </li>
         <li><strong>March</strong> (<a href="https://www.youtube.com/watch?v=HUG4l2CK68Y">video</a>)
           <ul>
             <li><a href="2019/03-mar">News from the Bleeding Edge</a></li>
