--- a/slides/index.html
+++ b/slides/index.html
@@ -36,7 +36,7 @@
       <h4>May</h4>
       <ul>
         <li><a href="2019/05-may">News from the Bleeding Edge</a></li>
-        <li><a href="2019/adhoc/remodeling">How I Used CSS & JS to Remodel a Condo</a> (Lightning Talk)</li>
+        <li><a href="adhoc/remodeling">How I Used CSS & JS to Remodel a Condo</a> (Lightning Talk)</li>
         <li><a href="#">Make Your React App Progressive</a></li>
         <li><strong>Sponsor: <a href="https://theguild.co/aboutus">The Guild</a></strong></li>
       </ul>
