Index page updates

--- a/slides/index.html
+++ b/slides/index.html
@@ -33,15 +33,15 @@
 
       <h3>2019</h3>
 
-      <h4>May</h4>
+      <h4>May (<a href="https://www.youtube.com/watch?v=l_kF6YPfECk">video</a>)</h4>
       <ul>
         <li><a href="2019/05-may">News from the Bleeding Edge</a></li>
-        <li><a href="adhoc/remodeling">How I Used CSS & JS to Remodel a Condo</a> (Lightning Talk)</li>
-        <li><a href="#">Make Your React App Progressive</a></li>
+        <li><a href="adhoc/remodeling">How I Used CSS & JS to Remodel a Condo</a></li>
+        <li><a href="2019/05-may/files/pwa-slides.pptx">Make Your React App Progressive</a></li>
         <li><strong>Sponsor: <a href="https://theguild.co/aboutus">The Guild</a></strong></li>
       </ul>
 
-      <h4>April</h4>
+      <h4>April (<a href="https://www.youtube.com/watch?v=iLIalQdl3d4&feature=youtu.be&t=600">video</a>)</h4>
       <ul>
         <li><a href="2019/04-apr">News from the Bleeding Edge</a></li>
         <li><a href="https://www.vicesoftware.com/react-redux-boilerplate-with-authentication-authorization-and-architecture-best-practices/">Production React Redux Architecture, Patterns, and Infrastructure Components</a></li>
