Added June slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -33,6 +33,12 @@
 
       <h3>2019</h3>
 
+      <h4>June (Video Available After Event)</h4>
+      <ul>
+        <li><a href="2019/06-jun">News from the Bleeding Edge</a></li>
+        <li>Real User Measurements and the Development Lifecycle</li>
+      </ul>
+
       <h4>May (<a href="https://www.youtube.com/watch?v=l_kF6YPfECk">video</a>)</h4>
       <ul>
         <li><a href="2019/05-may">News from the Bleeding Edge</a></li>
