Added July BEW segment

--- a/slides/index.html
+++ b/slides/index.html
@@ -33,7 +33,15 @@
 
       <h3>2019</h3>
 
-      <h4>June (Video Available After Event)</h4>
+      <h4>July (Video Available After Event)</h4>
+      <ul>
+        <li><a href="2019/07-jul">News from the Bleeding Edge</a></li>
+        <li>Building Telecom Apps with Node.js</li>
+        <li>Get Hired, Guaranteed</li>
+        <li><strong>Sponsor: <a href="https://company.auntbertha.com">Aunt Bertha</a></strong></li>
+      </ul>
+
+      <h4>June (<a href="https://youtu.be/h7s63ZhDMD4?t=509">video</a>)</h4>
       <ul>
         <li><a href="2019/06-jun">News from the Bleeding Edge</a></li>
         <li>Real User Measurements and the Development Lifecycle</li>
