--- a/slides/index.html
+++ b/slides/index.html
@@ -56,7 +56,7 @@
       <ul>
         <li><a href="2019/07-jul">News from the Bleeding Edge</a></li>
         <li>Building Telecom Apps with Node.js</li>
-        <li>Get Hired, Guaranteed</li>
+        <li><a href="2019/07-jul/files/get-hired.pdf">Get Hired, Guaranteed</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://company.auntbertha.com/">Aunt Bertha</a></strong></li>
       </ul>
 
