--- a/slides/index.html
+++ b/slides/index.html
@@ -52,6 +52,14 @@
 
       <!-- <h4>Month &mdash; <em style="font-weight: normal">video posted after meetup</em></h4> -->
 
+      <h4>August &mdash; <em style="font-weight: normal">video posted after meetup</em></h4>
+      <ul>
+        <li><a href="2019/08-aug">News from the Bleeding Edge</a></li>
+        <li>Everyone Can Do Open Source</li>
+        <li>Simplifying Security with IAM</li>
+        <li><strong class="sponsor">Sponsor: <a href="https://company.auntbertha.com/">Aunt Bertha</a></strong></li>
+      </ul>
+
       <h4>July &mdash; <a href="https://www.youtube.com/watch?v=heR6iswSeQw">video</a></h4>
       <ul>
         <li><a href="2019/07-jul">News from the Bleeding Edge</a></li>
