--- a/slides/index.html
+++ b/slides/index.html
@@ -56,7 +56,7 @@
       <ul>
         <li><a href="2019/08-aug">News from the Bleeding Edge</a></li>
         <li>Everyone Can Do Open Source</li>
-        <li>Simplifying Security with IAM</li>
+        <li><a href="adhoc/iam">Simplifying Security with IAM</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://company.auntbertha.com/">Aunt Bertha</a></strong></li>
       </ul>
 
