--- a/slides/index.html
+++ b/slides/index.html
@@ -52,11 +52,11 @@
 
       <!-- <h4>Month &mdash; <em style="font-weight: normal">video posted after meetup</em></h4> -->
 
-      <h4>August &mdash; <em style="font-weight: normal">video posted after meetup</em></h4>
+      <h4>August &mdash; <a href="https://www.youtube.com/watch?v=aUNfi4n5lTM&t=278">video</a></em></h4>
       <ul>
         <li><a href="2019/08-aug">News from the Bleeding Edge</a></li>
-        <li>Everyone Can Do Open Source</li>
-        <li><a href="adhoc/iam">Simplifying Security with IAM</a></li>
+        <li><a href="2019/08-aug/files/open-source.pdf">Everyone Can Do Open Source</a></li>
+        <li>Simplifying Security with IAM</li>
         <li><strong class="sponsor">Sponsor: <a href="https://company.auntbertha.com/">Aunt Bertha</a></strong></li>
       </ul>
 
