Updated Corey's talk link

--- a/slides/index.html
+++ b/slides/index.html
@@ -56,7 +56,7 @@
       <ul>
         <li><a href="2019/09-sep">News from the Bleeding Edge</a></li>
         <li>Analytics and Data for Developers</li>
-        <li>Writing a Github Action</li>
+        <li><a href="adhoc/github_actions/index.html">Writing a Github Action</a></li>
         <li>Azure Cosmos DB (SQL + JSON) with Node.js</li>
         <li><strong class="sponsor">Sponsor: <a href="https://fauna.com/">Fauna</a></strong></li>
       </ul>
