More slide links

--- a/slides/index.html
+++ b/slides/index.html
@@ -55,9 +55,9 @@
       <h4>September &mdash; <em style="font-weight: normal">video posted after meetup</em></h4>
       <ul>
         <li><a href="2019/09-sep">News from the Bleeding Edge</a></li>
-        <li>Analytics and Data for Developers</li>
+        <li><a href="https://docs.google.com/presentation/d/1rE_FqpZT8rFB2AswF_glLIoghZ7ZJsi3PtZTgCQxkos/edit?ts=5d84138e#slide=id.g5f38f9700d_1_485">Analytics &amp; Data for Developers</a></li>
         <li><a href="adhoc/github_actions/index.html">Writing a Github Action</a></li>
-        <li>Azure Cosmos DB (SQL + JSON) with Node.js</li>
+        <li><a href="https://github.com/tedpatrick/cosmosdb-nodejs/blob/master/cosmodb.pdf">Azure Cosmos DB (SQL + JSON) with Node.js</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://fauna.com/">Fauna</a></strong></li>
       </ul>
 
