--- a/slides/index.html
+++ b/slides/index.html
@@ -52,7 +52,7 @@
 
       <!-- <h4>Month &mdash; <em style="font-weight: normal">video posted after meetup</em></h4> -->
 
-      <h4>September &mdash; <em style="font-weight: normal">video posted after meetup</em></h4>
+      <h4>September &mdash; <a href="https://youtu.be/DSn3L1cOE7o?t=34">video</a></h4>
       <ul>
         <li><a href="2019/09-sep">News from the Bleeding Edge</a></li>
         <li><a href="https://docs.google.com/presentation/d/1rE_FqpZT8rFB2AswF_glLIoghZ7ZJsi3PtZTgCQxkos/edit?ts=5d84138e#slide=id.g5f38f9700d_1_485">Analytics &amp; Data for Developers</a></li>
@@ -61,7 +61,7 @@
         <li><strong class="sponsor">Sponsor: <a href="https://fauna.com/">Fauna</a></strong></li>
       </ul>
 
-      <h4>August &mdash; <a href="https://www.youtube.com/watch?v=aUNfi4n5lTM&t=278">video</a></em></h4>
+      <h4>August &mdash; <a href="https://www.youtube.com/watch?v=aUNfi4n5lTM&t=278">video</a></h4>
       <ul>
         <li><a href="2019/08-aug">News from the Bleeding Edge</a></li>
         <li><a href="2019/08-aug/files/open-source.pdf">Everyone Can Do Open Source</a></li>
