--- a/sponsorship.html
+++ b/sponsorship.html
@@ -29,22 +29,19 @@
 
       <p>To sponsor a meetup, or if you have any questions about sponsoring, please <a
         href="mailto:bleedingedgeatx@gmail.com?subject=Sponsorship%20Inquiry">email us</a>.
-      <p>We ask for <strong>$300</strong> to cover the cost of food and drink (we typically feed 80+
+      <p>Sponsorship is <strong>$350</strong>, which covers the cost of food and drinks (we typically feed 60+
         attendees). We handle all of the ordering and delivery logistics. Remaining money, if any,
         is used to offset the recurring costs of running the meetup (e.g. meetup.com fees, swag, etc).</p>
-      <p>Alternately, you are welcome to supply your own food/drinks instead, so long as it complies
-        with Capital Factory's rules. This means alcohol is OK as long as it is pre-packaged in
-        cans or bottles. Open liquor is not an option.</p>
       <p><strong>What you get:</strong></p>
       <ul>
-        <li>Your name in front of every person who receives our invitation emails (3,800+ as of
-          March 2019, mostly developers in Austin)</li>
+        <li>Your name in front of every person who receives our invitation emails (4,200+ as of
+          January 2020, mostly technology workers in Austin)</li>
         <li>A mention on the meetup page as a sponsor</li>
         <li>A thank you slide and mention during the Bleeding Edge Web presentation</li>
-        <li>A chance to address the group in person, if desired</li>
+        <li>A chance to speak to the group in person, if desired</li>
         <li>An opportunity to hand out stickers &amp; swag, sign people up, etc. We'll 
-          even keep any extra swag to hand out at future meetups.</li>
-        <li>A persistent sponsor link in our <a href="/slides/">talk history</a></li>
+          even keep any leftover swag to hand out at future meetups.</li>
+        <li>A permanent sponsor link on our <a href="/slides/">previous talks</a> page</li>
         <li>A thank you tweet from <a href="https://twitter.com/edgeatx">@edgeatx</a></li>
       </ul>
       <p>This is a great opportunity to create some local awareness, find potential employees,
