--- a/slides/index.html
+++ b/slides/index.html
@@ -48,9 +48,18 @@
       <p style="font-size:16px;">Most presentations include a "News from the Bleeding Edge" section that highlights a few current themes in web app
         development, in addition to a primary presentation (linked when available).</p>
 
-      <h3>2019</h3>
+      <h3>2020</h3>
 
       <!-- <h4>Month &mdash; <em style="font-weight: normal">video posted after meetup</em></h4> -->
+
+      <h4>January</h4>
+      <ul>
+        <li><a href="2020/01-jan">News from the Bleeding Edge</a></li>
+        <li><a href="https://slides.com/kmurgic/react-concurrent-mode/">React Concurrent Mode</a></li>
+        <li><strong class="sponsor">Sponsor: <a href="https://www.moove-it.com/">Moove It</a></strong></li>
+      </ul>
+      
+      <h3>2019</h3>
 
       <h4>September &mdash; <a href="https://youtu.be/DSn3L1cOE7o?t=34">video</a></h4>
       <ul>
