Replace verification file with tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="google-site-verification" content="JL3xeTGsxn_SMEyFbPZ3LFA0sxZEVWODjF92mLIHaVc" />
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -43,7 +44,7 @@
       <p>We meet at the offices of <a href="https://company.auntbertha.com/" target="_blank">Aunt Bertha</a> (near Mopac and Anderson Lane) from 6-8 pm on the 4th Wednesday
         of each month.</em></p></p>
       <p>Follow <a href="https://twitter.com/edgeatx">@edgeATX</a> for news and updates.</p>
-      <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
+      <p>Created with 1s and 0s by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
 
     <footer></footer>
