Index page updates

--- a/slides/index.html
+++ b/slides/index.html
@@ -40,8 +40,10 @@
 
     <section class="resources">
       <h2>Videos</h2>
-      <p style="font-size:16px;">Since early 2015 our meetups have been livestreamed and recorded. All of our past videos are available on the
-        <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">Austin Tech Live YouTube channel</a>.</p>
+      <p style="font-size:16px;">Since early 2015 our meetups have been livestreamed and recorded. All of our past videos are available on
+        <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">YouTube</a>. We have also 
+        created our own <a href="https://www.youtube.com/channel/UCcxO21IfeOaQCLbZ_lWI0Lg"> Bleeding Edge Web 
+        channel</a> you can subscribe to for notifications of new videos.</p>
 
       <h2>Slides</h2>
 
@@ -50,9 +52,15 @@
 
       <h3>2020</h3>
 
-      <!-- <h4>Month &mdash; <em style="font-weight: normal">video posted after meetup</em></h4> -->
+      <h4>February</h4>
+      <ul>
+        <li><a href="2020/02-feb">News from the Bleeding Edge</a></li>
+        <li><a href="">A CLI-First Approach to Web Development</a></li>
+        <li><a href="">TypeScript In-Depth</a></li>
+        <li><strong class="sponsor">Sponsor: <a href="https://events.indeed.com/hiringevents/">Indeed Hiring Events</a></strong></li>
+      </ul>
 
-      <h4>January</h4>
+      <h4>January &mdash; <a href="https://www.youtube.com/watch?v=VZTBpnL-58I">video</a></h4>
       <ul>
         <li><a href="2020/01-jan">News from the Bleeding Edge</a></li>
         <li><a href="https://slides.com/kmurgic/react-concurrent-mode/">React Concurrent Mode</a></li>
