Added link to TypeScript preso.

--- a/slides/index.html
+++ b/slides/index.html
@@ -55,8 +55,8 @@
       <h4>February</h4>
       <ul>
         <li><a href="2020/02-feb">News from the Bleeding Edge</a></li>
-        <li><a href="">A CLI-First Approach to Web Development</a></li>
-        <li><a href="">TypeScript In-Depth</a></li>
+        <li><a href="adhoc/clifirst">A CLI-First Approach to Web Development</a></li>
+        <li><a href="https://github.com/tedpatrick/ts-in-depth-2020">TypeScript In-Depth</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://events.indeed.com/hiringevents/">Indeed Hiring Events</a></strong></li>
       </ul>
 
